[gd_scene load_steps=5 format=2]

[ext_resource path="res://status.gd" type="Script" id=1]
[ext_resource path="res://wip sprites/fire.png" type="Texture" id=2]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="ParticlesMaterial" id=2]
lifetime_randomness = 0.41
emission_shape = 1
emission_sphere_radius = 2.47
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 0.0
initial_velocity = 37.02
angular_velocity = -720.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = -50.57
damping = 31.03
color = Color( 1, 0.4, 0, 1 )

[node name="status" type="Node2D"]
script = ExtResource( 1 )

[node name="fire" type="Node2D" parent="."]

[node name="fire_timer" type="Timer" parent="fire"]
wait_time = 5.0
one_shot = true

[node name="fire_particle" type="Particles2D" parent="fire"]
material = SubResource( 1 )
emitting = false
amount = 20
lifetime = 0.3
process_material = SubResource( 2 )
texture = ExtResource( 2 )
[connection signal="timeout" from="fire/fire_timer" to="." method="_on_fire_timer_timeout"]
